# termixion

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY.md  cliff.toml  clippy.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
.claude/hooks/: README.md  commit-msg  pre-commit  pre-push
.claude/rules/: README.md  architecture.md
.github/workflows/: ci.yml  r9-issue-link.yml  release.yml
app/: eslint.config.js  index.html  package.json  playwright.config.ts  vite.config.ts
app/e2e/: activity-toggle.spec.ts  ai-counter.spec.ts  app.spec.ts  badges.spec.ts  copy-on-select.spec.ts  fonts.spec.ts  label-orientation.spec.ts  panes.spec.ts  scrollbar.spec.ts  search.spec.ts  settings.spec.ts  shell-enhancements.spec.ts  shell.spec.ts  tab-position.spec.ts  tabs.spec.ts  theme-visibility.spec.ts  themes.spec.ts  title-bar.spec.ts
app/public/fonts/: README.md
app/src/: App.commands.test.tsx  App.confirmClose.test.tsx  App.scripts.test.tsx  App.test.tsx  App.tsx  fonts.css  index.css  main.order.test.ts  main.tsx  surface.test.ts  surface.ts  vite-env.d.ts
app/src/chrome/: AiSessionCounter.tsx  TitleBar.test.tsx  TitleBar.tsx  aiSessionBuckets.test.ts  aiSessionBuckets.ts
app/src/commands/: CommandPalette.test.tsx  CommandPalette.tsx  PaletteOverlay.tsx  chordGlyphs.test.ts  chordGlyphs.ts  commandDocs.test.ts  commandDocs.ts  dispatch.test.ts  dispatch.ts  growPane.test.ts  growPane.ts  keychord.test.ts  keychord.ts  keymapDispatch.test.ts  keymapDispatch.ts  keysBackend.test.ts  keysBackend.ts  registry.test.ts  registry.ts
app/src/conformance/: README.md  alt-screen.test.ts  bracketed-paste.test.ts  cursor-controls.test.ts  driver.ts  erase-edit.test.ts  mouse-reporting.test.ts  osc.test.ts  osc133.test.ts  reports.test.ts  sgr-colors.test.ts  unicode.test.ts  wrap-regions-origin.test.ts
app/src/control/: controlBridge.test.ts  controlBridge.ts
app/src/ipc/: backend.test.ts  backend.ts  eventBus.ts  useBackend.test.tsx  useBackend.ts
app/src/panes/: ActivityLineOverlay.test.tsx  ActivityLineOverlay.tsx  BadgeOverlay.test.tsx  BadgeOverlay.tsx  ConfirmCloseDialog.test.tsx  ConfirmCloseDialog.tsx  activityFlash.test.ts  activityFlash.ts  activityLine.test.ts  activityLine.ts  badgeFit.test.ts  badgeFit.ts  badgeVisible.test.ts  badgeVisible.ts  closeGuard.test.ts  closeGuard.ts  dividerDrag.test.ts  dividerDrag.ts  dropZone.test.ts  dropZone.ts  interactivePrograms.test.ts  interactivePrograms.ts  layoutTree.test.ts  layoutTree.ts  paneChrome.test.ts  paneChrome.ts  paneNav.test.ts  paneNav.ts  redock.test.ts
app/src/perf/: evaluatePerf.test.ts  evaluatePerf.ts  multipane.test.ts  runPerf.test.ts  runPerf.ts  stats.test.ts  stats.ts
app/src/scripts/: ScriptPicker.test.tsx  ScriptPicker.tsx  fuzzy.test.ts  fuzzy.ts  scriptsBackend.test.ts  scriptsBackend.ts
app/src/search/: FindBar.test.tsx  FindBar.tsx  findState.test.ts  findState.ts
app/src/settings/: AboutSettings.test.tsx  AboutSettings.tsx  AppearanceSettings.test.tsx  AppearanceSettings.tsx  ScriptsSettings.test.tsx  ScriptsSettings.tsx  SettingsApp.test.tsx  SettingsApp.tsx  SettingsHost.tsx  SettingsView.test.tsx  SettingsView.tsx  SettingsWindowHost.tsx  TerminalSettings.test.tsx  TerminalSettings.tsx  ThemeContextMenu.test.tsx  ThemeContextMenu.tsx  components.test.tsx  components.tsx  icons.tsx  settings.css  settingsStore.test.ts  settingsStore.ts  useSettingsMenu.test.ts  useSettingsMenu.ts
app/src/smoke/: evaluateSmoke.test.ts  evaluateSmoke.ts  runSmoke.test.ts  runSmoke.ts
app/src/tabs/: TabStrip.test.tsx  TabStrip.tsx  barLayout.test.ts  barLayout.ts  tabHints.test.ts  tabHints.ts  tabKeymap.test.ts  tabKeymap.ts  tabState.test.ts  tabState.ts  tabTitle.test.ts  tabTitle.ts
app/src/terminal/: TerminalView.test.tsx  TerminalView.tsx  clipboard.test.ts  clipboard.ts  copyOnSelect.test.ts  copyOnSelect.ts  copyOnSelectSettings.ts  cursorSettings.test.ts  cursorSettings.ts  emulationOptions.ts  fontAssets.test.ts  fontCatalog.test.ts  fontCatalog.ts  fontSettings.test.ts  fontSettings.ts  iterm2Theme.test.ts  iterm2Theme.ts  linkHandler.test.ts  linkHandler.ts  mountTerminal.test.ts  (+28 more)
crates/termixion-core/: Cargo.toml
crates/termixion-core/src/: config.rs  fake.rs  lib.rs  pty.rs  pump.rs  registry.rs  scripts.rs  session.rs  shells.rs  theme.rs  zdotdir.rs
crates/termixion-core/tests/: theme_example.rs  theme_golden.rs
crates/termixion-core/tests/fixtures/: theme-golden.json  theme-golden.toml
crates/termixion-platform/: Cargo.toml
crates/termixion-platform/src/: foreground.rs  lib.rs  macos.rs  unix.rs
crates/termixion-platform/tests/: activity.rs  configured_shell.rs  foreground.rs  foreground_meta.rs  locale_env.rs  session_lifecycle.rs  zdotdir_shim.rs
crates/termixion-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.sidecar.conf.json  tauri.updater.conf.json
crates/termixion-tauri/capabilities/: default.json  main-window.json
crates/termixion-tauri/icons/: icon.icns
crates/termixion-tauri/src/: config_io.rs  control.rs  control_io.rs  enhancements_io.rs  main.rs  menu.rs  scripts_io.rs  shell_integration_io.rs  shells_io.rs  themes_io.rs  window_manager.rs
crates/termixion-tauri/tests/: cli_version.rs
docs/: CONTRIBUTING.md  RELEASE.md  activity-indicator.md  badges.md  commands.md  config.md  remote-control.md  scripts.md  themes.md
docs/adr/: .gitkeep  0001-pty-transport.md  0002-no-chezmoi-integration.md
docs/design/: beta-hardening-report.md  performance-protocol.md  visual-baseline.md
docs/examples/: mytheme.toml
docs/testing/: trmx-180-copy-on-select-coverage.md
resources/shell-enhancements/: README.md
resources/shell-integration/: integration_test.sh  termixion.bash  termixion.zsh
scripts/: check-core-seam.sh  check-isc-headers.sh  check-issue-link.sh  check-release-metadata.sh  churn.sh  fetch-starship.sh  gen-changelog.sh  install-hooks.sh  leak-check.sh  perf.sh  rebuild.sh  repo-stats.py  repo-stats.test.py  secret-scan.sh  smoke-linux.sh  smoke.sh  visual-review.sh
(+70 files in other folders)
