# Termixion — Cargo workspace (A-1 skeleton).
# Crate layout per the authority plan §6: pure-core / thin-shells.
[workspace]
resolver = "2"
members = [
  "crates/termixion-core",
  "crates/termixion-platform",
  "crates/termixion-tauri",
]

[workspace.package]
version = "0.0.5"
edition = "2024"
license = "ISC"
authors = ["Eric Y. Liu"]
repository = "https://github.com/xinquan568/termixion"

# E-3 — release profile tuned for a small, fast desktop binary (NFR-2 footprint smoke is advisory).
# panic="abort" is auto-overridden to unwind for test/bench targets, so `cargo test` is unaffected.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
