# termixion-core — pure Rust, PLATFORM-AGNOSTIC (authority §6).
# No platform crates, no cfg(target_os) — enforced by scripts/check-core-seam.sh (D-1).
[package]
name = "termixion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# (B-1 adds the domain model; no platform deps here.)
# trmx-80 (FR-13): the pure config module — serde + toml only, both platform-agnostic.
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
