# termixion-platform — platform traits + macOS impls now; Linux impls added at the Linux build.
# This is the only crate allowed to use cfg(target_os) / platform crates (the P1-8 seam).
[package]
name = "termixion-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
termixion-core = { path = "../termixion-core" }

# Platform deps live here (the seam), gated per OS so the Linux build of this crate stays free of
# them. B-2 adds the macOS PTY backend via portable-pty.
[target.'cfg(target_os = "macos")'.dependencies]
portable-pty = "0.9"
