# termixion-platform — platform traits + macOS impls now; Linux impls added at the Linux build.
# This is the only crate allowed to use cfg(target_os) / platform crates (the P1-8 seam).
[package]
name = "termixion-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
termixion-core = { path = "../termixion-core" }

# Platform deps live here (the seam), gated to unix so both macOS and Linux get the portable-pty backend
# (trmx-102). portable-pty selects the platform PTY impl at runtime; no per-OS feature is needed.
[target.'cfg(unix)'.dependencies]
portable-pty = "0.9"
# trmx-159 (T1): the macOS foreground-metadata helpers (KERN_PROCARGS2 argv + proc_pidfdinfo tty
# check) call raw sysctl / proc_pid* APIs; same version as termixion-tauri.
libc = "0.2"
